# painkub

./: CMakeLists.txt  grammar.peggy
script/: generate.js
spec/: preview.html
src/: kub.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
test/: main.kub  t1.kub
